#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package XtcInput
#------------------------------------------------------------------------

Package author: Andrei Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-10-10
2014-11-24 David schneider
- add check for corrupted xtc to address JIRA issue PSAS-71

Tag: V00-10-09
2014-09-18 David schneider
- adjust debug printout

Tag: V00-10-08
2014-09-16 David Schneider
- reduce debug verbosity

Tag: V00-10-07
2014-09-02 David Schneider
- change jump options from second event to third event. Allows psana to
  process both beginRun and Configure before jump. Then user modules can
  get a valid run number in beginRun

Tag: V00-10-06
2014-08-28 David Schneider
- Give new DgramReader argument default value for backward compatibility.
  New argument broke build with O2OTranslator

Tag: V00-10-05
2014-08-27 David Schneider
- add feature: jump to arbitrary offsets in xtc files before second event. 
  DgramReader takes new argument: firstEventAfterConfigure
  This percolates down to other classes in the package.
  New class XtcFilesPosition describes file offsets before second event.

Tag: V00-10-04
2014-08-08 David Schneider
- add file offset field to XtcInput::Dgram
- have psana record file offset for standard xtcinput (not indexing)
  presently information not used by other packages 
- change a declaration from char * to const char * to fix rhel6 warning

Tag: V00-10-03
2014-08-01 David Schneider
- discard L1Accept's that have 0x1FFFF as the fiducial. jira ticket PSAS-13
 
Tag: V00-10-02
2014-07-22 David Schneider
- add backward compatible XtcStreamDgIter constructor for package PSXtcQC
- also add backward compatiable DgramReader constructor - though doesn't 
  appear to be needed
	

Tag: V00-10-01
2014-07-18 David Schneider