@@ -63,9 +63,10 @@ public:
    *  @param[in] stream    Stream number, or -1 for all stream, -2 for any one streama, -3 for ranges of streams
    *  @param[in] ds_streams Ranges of streams
    *  @param[in] liveTimeout Timeout in second to wait for live data
+   *  @param[in] runLiveTimeout Timeout in seconds to wait for a new run
    *  @param[in] filesdb   Database connection
    */
-  StreamFileIterLive (unsigned expNum, unsigned run, int stream, const IData::Dataset::Streams& ds_streams, unsigned liveTimeout,
+  StreamFileIterLive (unsigned expNum, unsigned run, int stream, const IData::Dataset::Streams& ds_streams, unsigned liveTimeout, unsigned runLiveTimeOut,
       const boost::shared_ptr<LiveFilesDB>& filesdb) ;
 
   // Destructor
@@ -94,6 +95,7 @@ private:
   int m_stream;
   IData::Dataset::Streams m_ds_streams;
   unsigned m_liveTimeout;
+  unsigned m_runLiveTimeout;
   boost::shared_ptr<LiveFilesDB> m_filesdb;
   bool m_initialized;
   Streams m_streams;
